# USTC-107-let-ai-think-of-one

./: .gitattributes  .gitignore  README.md  TEST_REPORT.md  main.py  pyproject.toml  requirements.txt  server.py  settings.example.json  settings.json  test_campus_rag.py  users.db
campus-rag/: READEME.md  config.py  index_manager.py  llm_factory.py  requirements.txt  test_static.py
campus_rag/: .env.example  READEME.md  README.md  __init__.py  auth.py  config.py  data_loader.py  index_manager.py  ingest.py  keyword_retriever.py  llm_factory.py  query.py  query_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  FilesPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: userStore.ts
frontend/src/types/: index.ts
model/: config.py
tests/: test_campus_rag.py
tools/: file_tool.py  search.py
